--- a/WebAppTiendaDelivery/Views/Shared/_Layout.cshtml
+++ b/WebAppTiendaDelivery/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
@@ -9,23 +9,34 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-success bg-success navbar-expand-lg fixed-top">
         <div class="container">
-            @Html.ActionLink("Nombre de la aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+            <div class="navbar-brand bg-success d-flex align-items-center">
+                <img src="~/images/logo.png" alt="Logo" style="height: 30px;">
+                @Html.ActionLink("Tienda Delivery", "Index", "Home", new { area = "" }, new { @class = "nav-link fw-bold text-white bg-success" })
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        @Html.ActionLink("Ofertas", "Index", "Home", new { }, new { @class = "nav-link text-white bg-success" })
+                    </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Nosotros", "About", "Home", new { }, new { @class = "nav-link text-white bg-success" })
+                    </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Contactenos", "Contact", "Home", new { }, new { @class = "nav-link text-white bg-success" })
+                    </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Clientes", "ListaClientes", "Cliente", new { }, new { @class = "nav-link text-white bg-success" })
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+    <div class="container body-content" style="margin-top: 70px; background-color: white;">
         @RenderBody()
         <hr />
         <footer>
@@ -37,4 +48,5 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
+
 </html>
