Crea procedimiento almacenado por cliente

--- a/WebAppTiendaDelivery/Views/Shared/_Layout.cshtml
+++ b/WebAppTiendaDelivery/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         @Html.ActionLink("Pedidos por Fechas", "PedidosFechas", "Cliente", new { }, new { @class = "nav-link text-white bg-success" })
                     </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Pedidos por Cliente", "PedidosCliente", "Cliente", new { }, new { @class = "nav-link text-white bg-success" })
+                    </li>
                 </ul>
             </div>
         </div>
