--- a/WebAppTiendaDelivery/Views/Shared/_Layout.cshtml
+++ b/WebAppTiendaDelivery/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="navbar-brand bg-success d-flex align-items-center">
                 <img src="~/images/logo.png" alt="Logo" style="height: 30px;">
-                @Html.ActionLink("Tienda Delivery", "Index", "Home", new { area = "" }, new { @class = "nav-link fw-bold text-white bg-success" })
+                @Html.ActionLink("Delivery Deliverlli", "Index", "Home", new { area = "" }, new { @class = "nav-link fw-bold text-white bg-success" })
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
