--- a/WebAppTiendaDelivery/Views/Shared/_Layout.cshtml
+++ b/WebAppTiendaDelivery/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         @Html.ActionLink("Clientes", "ListaClientes", "Cliente", new { }, new { @class = "nav-link text-white bg-success" })
                     </li>
                     <li class="nav-item">
+                        @Html.ActionLink("Productos", "ListaProductos", "Producto", new { }, new { @class = "nav-link text-white bg-success" })
+                    </li>
+                    <li class="nav-item">
                         @Html.ActionLink("Pedidos por Fechas", "PedidosFechas", "Cliente", new { }, new { @class = "nav-link text-white bg-success" })
                     </li>
                     <li class="nav-item">
